Feat: "폰트 변경 및 공지사항 페이지 스타일링 중"

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,48 +1,53 @@
 @font-face {
-  font-family: "Spoqa Han Sans";
-  font-weight: 700;
-  src: local("Spoqa Han Sans Bold"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansBold.woff2") format("woff2"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansBold.woff") format("woff"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansBold.ttf") format("truetype");
+  font-family: "Nanum Square EB";
+  src: url("/fonts/NanumSquareEB.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
-  font-weight: 400;
-  src: local("Spoqa Han Sans Regular"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansRegular.woff2") format("woff2"),
-    url("/fonts/spoqa-han-sans/SpoqaHanSans/SpoqaHanSansRegular.woff")
-      format("woff"),
-    url("/fonts/spoqa-han-sans/SpoqaHanSans/SpoqaHanSansRegular.ttf")
-      format("truetype");
+  font-family: "Nanum Square B";
+  src: url("/fonts/NanumSquareB.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
-  font-weight: 300;
-  src: local("Spoqa Han Sans Light"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansLight.woff2") format("woff2"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansLight.woff") format("woff"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansLight.ttf") format("truetype");
+  font-family: "Nanum Square R";
+  src: url("/fonts/NanumSquareR.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Spoqa Han Sans";
-  font-weight: 100;
-  src: local("Spoqa Han Sans Thin"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansThin.woff2") format("woff2"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansThin.woff") format("woff"),
-    url("/fonts/SpoqaHanSans/SpoqaHanSansThin.ttf") format("truetype");
+  font-family: "Nanum Square L";
+  src: url("/fonts/NanumSquareL.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nanum Square acEB";
+  src: url("/fonts/NanumSquare_acEB.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nanum Square acB";
+  src: url("/fonts/NanumSquare_acB.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nanum Square acR";
+  src: url("/fonts/NanumSquare_acR.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Nanum Square acL";
+  src: url("/fonts/NanumSquare_acL.ttf") format("truetype");
+}
+
+main {
+  background: #f0f2fa;
 }
 
 html,
-body {
+body,
+p {
   padding: 0;
   margin: 0;
-  font-family: "Spoqa Han Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif !important;
+  font-family: "Nanum Square B";
 }
 
 a {
@@ -52,6 +57,7 @@ a {
 
 * {
   box-sizing: border-box;
+  color: #363636;
 }
 
 *::-webkit-scrollbar {
