--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,7 @@ p {
   padding: 0;
   margin: 0;
   font-family: "Nanum Square B";
+  overflow-x: hidden;
 }
 
 a {
@@ -62,4 +63,32 @@ a {
 
 *::-webkit-scrollbar {
   display: none;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  width: 2.5rem !important;
+  height: 2.5rem !important;
+  background: #f1f3f557;
+  border-radius: 50%;
+  color: #2f3438 !important;
+}
+
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after,
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  font-family: "Nanum Square EB";
+  font-size: 1.3rem !important;
+  color: #fff;
+}
+
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  content: "←" !important;
+}
+
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: "→" !important;
 }
